; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jbd2/extr_journal.c_jbd2_journal_grab_journal_head.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jbd2/extr_journal.c_jbd2_journal_grab_journal_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.journal_head = type { i32 }
%struct.buffer_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.journal_head* @jbd2_journal_grab_journal_head(%struct.buffer_head* %0) #0 {
  %2 = alloca %struct.buffer_head*, align 8
  %3 = alloca %struct.journal_head*, align 8
  store %struct.buffer_head* %0, %struct.buffer_head** %2, align 8
  store %struct.journal_head* null, %struct.journal_head** %3, align 8
  %4 = load %struct.buffer_head*, %struct.buffer_head** %2, align 8
  %5 = call i32 @jbd_lock_bh_journal_head(%struct.buffer_head* %4)
  %6 = load %struct.buffer_head*, %struct.buffer_head** %2, align 8
  %7 = call i64 @buffer_jbd(%struct.buffer_head* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.buffer_head*, %struct.buffer_head** %2, align 8
  %11 = call %struct.journal_head* @bh2jh(%struct.buffer_head* %10)
  store %struct.journal_head* %11, %struct.journal_head** %3, align 8
  %12 = load %struct.journal_head*, %struct.journal_head** %3, align 8
  %13 = getelementptr inbounds %struct.journal_head, %struct.journal_head* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %13, align 4
  br label %16

16:                                               ; preds = %9, %1
  %17 = load %struct.buffer_head*, %struct.buffer_head** %2, align 8
  %18 = call i32 @jbd_unlock_bh_journal_head(%struct.buffer_head* %17)
  %19 = load %struct.journal_head*, %struct.journal_head** %3, align 8
  ret %struct.journal_head* %19
}

declare dso_local i32 @jbd_lock_bh_journal_head(%struct.buffer_head*) #1

declare dso_local i64 @buffer_jbd(%struct.buffer_head*) #1

declare dso_local %struct.journal_head* @bh2jh(%struct.buffer_head*) #1

declare dso_local i32 @jbd_unlock_bh_journal_head(%struct.buffer_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
